[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gernabind"
version = "0.1.0"
description = "Geometric-informed RNA-ligand Binding Specificity Prediction with Deep Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "rna-fm==0.2.2",
    "ml_collections==0.1.1",
    "simtk==0.1.0",
    "openmm==8.1.1",
    "torchdrug==0.2.1",
    "torch_geometric==2.4.0",
    "equiformer-pytorch",
    "edl_pytorch==0.0.2",
    "rdkit==2023.9.5",
    "biopython==1.79",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "prody==2.4.1"
]
