[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gernabind"
version = "0.1.0"
description = "Geometric-informed RNA-ligand Binding Specificity Prediction with Deep Learning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "torchaudio==2.1.0",
    "rna-fm==0.2.2",
    "ml_collections==0.1.1",
    "simtk==0.1.0",
    "openmm==8.1.1",
    "torchdrug==0.2.1",
    "torch_geometric==2.4.0",
    "torch_cluster==1.6.3",
    "torch_scatter==2.1.2",
    "equiformer-pytorch",
    "edl_pytorch==0.0.2",
    "rdkit==2023.9.5",
    "biopython==1.79",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "prody==2.4.1"
]

[tool.setuptools]
py-modules = []

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu121", marker = "sys_platform == 'linux'" },
]
torch_cluster = [
    { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-geometric-cu121", marker = "sys_platform == 'linux'" },
]
torch_scatter = [
    { index = "pytorch-geometric-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-geometric-cu121", marker = "sys_platform == 'linux'" },
]



[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-geometric-cu121"
url = "https://data.pyg.org/whl/torch-2.1.0+cu121.html"
explicit = true
format = "flat"

[[tool.uv.index]]
name = "pytorch-geometric-cpu"
url = "https://data.pyg.org/whl/torch-2.1.0+cpu.html"
explicit = true
format = "flat"